# my-messenger

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  main.cpp
client/include/: Client.hpp  EchoClient.hpp  include.hpp
client/sources/: Client.cpp  EchoClient.cpp
client_tests/: test.cpp
common/: myprotocol.hpp  myprotocoldefs.hpp
scripts/: coverage.sh
server/AppServer/include/: IRequestHandler.hpp
server/ApplicationServer/include/: ApplicationServer.hpp  IRequestHandler.hpp  PlainRequestHandler.hpp
server/ApplicationServer/sources/: ApplicationServer.cpp
server/ConnectionServer/include/: Connection.hpp  ConnectionManager.hpp  Logger.hpp  Server.hpp
server/ConnectionServer/sources/: Connection.cpp  ConnectionManager.cpp  Server.cpp
server/MessengerServer/include/: IRequestHandler.hpp  PlainRequestHandler.hpp
server/MessengerServer/sources/: PlainRequestHandler.cpp
server/Middleware/include/: ServersMiddleware.hpp
server/Middleware/sources/: ServersMiddleware.cpp
server/RequestHandling/include/: IRequestHandler.hpp  PlainRequestHandler.hpp
server/RequestHandling/sources/: PlainRequestHandler.cpp
server/include/: config.hpp  include.hpp
server/sources/: source.cpp
tests/: test.cpp
